# HealthCare_Production_chatbot

./: .env.example  FRONTEND_AUTH_GUIDE.md  MIGRATION_PLAN.md  README.md  RoadMap.md  clear_database.py  config.py  gunicorn_conf.py  main.py  migration_clinical_notes.sql  processed_output.json  pyproject.toml  requirements.txt  result.json  supabase_setup.sql  test.py  testing.py  testinglog.json
Rag_Service/: ingestion.py  retrieval.py
Score_Rater/: rater.py
api/: admin.py  article.py  auth.py  clinical_note.py  ddx.py  doctor_chat.py  doctor_chat_v2.py  ecg.py  email_auth.py  evidence.py  patient_chat.py  patient_chat_v2.py
data_utils/: document_parser.py  vector_db.py
database/: __init__.py  database.py  models.py
logs/: application.log.2025-09-03  application.log.2025-09-05  application.log.2025-09-09  application.log.2025-09-10  application.log.2025-10-10  application.log.2025-10-15  application.log.2025-10-16  application.log.2025-10-19  application.log.2025-11-02  application.log.2025-11-04  application.log.2025-12-28  application.log.2025-12-31  application.log.2026-01-02  application.log.2026-01-03  application.log.2026-01-04  application.log.2026-01-05  application.log.2026-01-09  application.log.2026-01-12  application.log.2026-01-19  application.log.2026-01-30  application.log.2026-01-31  application.log.2026-02-28  application.log.2026-03-03  application.log.2026-03-04  application.log.2026-03-07  error.log.2026-02-01  error.log.2026-02-28  error.log.2026-03-03  error.log.2026-03-04  error.log.2026-03-05
memory/: current_memory.py  long_term_memory.py  memory_manager.py
old migration scripts/: add_email_fields.py  add_refresh_tokens.py  clear_research_papers.py  clear_research_papers_standalone.py  migrate_blacklist.py  migrate_chat_memory.py  migrate_chat_memory_simple.py
tests/: conftest.py  test_auth_flow_db.py  test_refresh_tokens.py  test_token_validation.py
utils/: auth_security.py  (+23 more)
